# SimpleSimplex

./: .gitignore  CMakeLists.txt  README.md  problem_data.py  run_solver.py
ILP/: branch_and_bound.ipynb  cutting_plane.ipynb  cutting_plane.py
IngtegerLinearProgramming/: branch_and_bound.ipynb  cutting_plane.ipynb
LP/: dual_simplex.ipynb  dual_simplex.py  two_phases.py  two_phases_simplex.ipynb
LinearProgramming/: two_phases_simplex.ipynb
c_version/: CMakeLists.txt  a.out  fraction.c  main.c  test_frac.c  two_phases_simplex.c
c_version/data/: numerators
c_version/include/: fraction.h  simple_simplex.h  utils.h
c_version/src/: fraction.c  main.c  simple_simplex.c  utils.c
include/: fraction.h  simple_simplex.h  utils.h
old/: simplex_tableau.py
src/: fraction.c  main.c  simple_simplex.c
